WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
278756
[css-view-transitions-2] skip-outbound-vt-before-reveal.html fails
https://bugs.webkit.org/show_bug.cgi?id=278756
Summary
[css-view-transitions-2] skip-outbound-vt-before-reveal.html fails
Matt Woodrow
Reported
2024-08-27 20:13:17 PDT
This test has a render blocking element that prevents pagereveal from being fired, and then navigates to a new page. The test is expecting the navigation to happen without the pagereveal event being sent, so no cross-document view transition happens. With WebKit, initiating the navigation results in any pending fetch requests being cancelled, which removes the render blocking. Pagereveal then happens before we commit the navigation (and fire pageswap), so we get a VT and the test fails.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-08-27 20:14:21 PDT
My reading of this spec makes me think this is expected:
https://html.spec.whatwg.org/multipage/webappapis.html#queue-a-global-task
Matt Woodrow
Comment 2
2024-08-27 20:15:21 PDT
Wrong link,
https://html.spec.whatwg.org/multipage/browsing-the-web.html#beginning-navigation:queue-a-global-task-3
Radar WebKit Bug Importer
Comment 3
2024-08-29 14:10:42 PDT
<
rdar://problem/134965723
>
Matt Woodrow
Comment 4
2024-09-04 14:55:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33144
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug