[css-view-transitions-2] skip-outbound-vt-before-reveal.html fails. https://bugs.webkit.org/show_bug.cgi?id=278756 <rdar://134965723>

Reviewed by NOBODY (OOPS!).

Skip the view transition if the navigation initiates before we've rendered the old page.

Fixes the test from using a pending fetch render block (which gets removed on navigation), to a <link rel=expect> which won't ever be found and ensures we remain render blocked.

Also removes a chromium only test that wasn't intended to be in WPT.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/navigation/chromium-paint-holding-timeout-expected.html: Removed.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/navigation/chromium-paint-holding-timeout-ref.html: Removed.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/navigation/chromium-paint-holding-timeout.html: Removed.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/navigation/resources/chromium-paint-holding-timeout.html: Removed.
* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/navigation/resources/outbound-before-render.html:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::dispatchPageswapEvent):